Se actualiza la parte del forntend

--- a/frontend_flask/templates/index.html
+++ b/frontend_flask/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Bienvenido al Frontend</h1>
-<p>Este es el frontend en Flask que se conecta al backend en Next.js</p>
+<h1>Welcome to Circle APP</h1>
+<p>Your new app for managing friend circles.</p>
 {% endblock %}
