Se actualizan las apis

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Bienvenido al Frontend</h1>
-<p>Este es el frontend en Flask que se conecta al backend en Next.js</p>
+<h1>✨ Bienvenida a Circle App ✨</h1>
+<p>Tu nueva app para conectar y compartir con tus amigos 💕</p>
 {% endblock %}
