Se cambia el titulo de la pagina

--- a/frontend_flask/templates/index.html
+++ b/frontend_flask/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Welcome to Circle APP</h1>
-<p>Your new app for managing friend circles.</p>
+<h1>✨ Bienvenida a Circle App ✨</h1>
+<p>Tu nueva app para conectar y compartir con tus amigos 💕</p>
 {% endblock %}
