--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
         {% endfor %}
       {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}
+    TEST
+    {% block content %}
+
+    {% endblock %}
   </div>
 </body>
 </html>
