--- a/frontend_flask/templates/index.html
+++ b/frontend_flask/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1> Bienvenido a Circle App 🟠 </h1>
+<h1> Bienvenido a Circle App  </h1>
 <p>Tu nueva app para conectar y compartir con tus amigos 💕</p>
 {% endblock %}
